--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,17 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
+
+    "post-install-cmd": {
+        "php artisan clear-compiled":true,
+        "php artisan optimize":true,
+        "chmod -R 777 public/" :true
+    },
+
+
     "minimum-stability": "dev",
     "prefer-stable": true
+
+    
+
 }
