--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "watch-poll": "mix watch -- --watch-options-pool=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix production"
+        "production": "mix production",
+        "heroku-postbuild": "npm run prod"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
